--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
     {
       "matches": ["*://*/*"],
       "js": ["build.js"],
+      "css": ["styles.css"],
       "run_at": "document_start"
     }
   ],
