--- a/manifest.json
+++ b/manifest.json
@@ -18,11 +18,12 @@
   "content_scripts": [
     {
       "matches": ["*://*/*"],
+      "exclude_matches": ["https://*.google.com/*"],
       "js": ["build.js"],
       "css": ["styles.css"],
-      "run_at": "document_start"
+      "all_frames": true
     }
-  ],
+  ]
 
 
 }
