--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,16 @@
   },
 
   "browser_action": {
-    "default_icon": "icon16.png",
-    "default_popup": "popup.html"
+    "default_icon": "icon16.png"
   },
+
+  "background": {
+    "scripts": ["chrome-promise.js", "background.js"]
+  },
+
+  "permissions": [
+    "tabs"
+  ],
 
 
   "content_scripts": [
@@ -20,8 +27,7 @@
       "matches": ["*://*/*"],
       "exclude_matches": ["https://*.google.com/*"],
       "js": ["build.js"],
-      "css": ["styles.css"],
-      "all_frames": true
+      "css": ["styles.css"]
     }
   ],
 
