--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "HistoryHover",
   "version": "0.1.0",
-  "description": "Get's the etymology of any word on a webpage",
+  "description": "Gets the etymology of any word on a webpage",
   "icons": {
     "128": "icon128.png",
     "48": "icon48.png",
